remove glyphicon since it doesn't work, fix button group bg on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -163,9 +163,8 @@ h3 {
   margin: 10px;
   
   .btn {
-    background-color: $warm-gray;
     text-align: center;
-    margin-bottom: 3px;
+    background-color: transparent;
     
     img {
       width: 50%;
@@ -191,6 +190,10 @@ h3 {
     }
     
     @media (min-width: $screen-sm-min) {
+      
+      background-color: $warm-gray;
+      margin-bottom: 3px;
+      
       img {
         margin: 10px;
       }
